# libmogra-sandbox

./: LICENSE  README.md  download-dunya.py  eval-on-tonnetz.ipynb  gnn.ipynb  hindustani-raag-identifier-colab.ipynb  hindustani-raag-identifier.ipynb  histograms-dunya.ipynb  librosa-scratch.ipynb  odavmoorchhana.py  pitch-detect.ipynb  pitchreader-dunya.ipynb  playground-dunya.ipynb  playground-librosa.ipynb  playground-markov.ipynb  playground-midi.ipynb  pyproject.toml  raagdataset.ipynb  raagspace.ipynb  seqnn.ipynb  tonnetz-trials.ipynb  trial_data.pkl  unique-frequency-generator.ipynb
ISMIR2024/: README.md  demo.ipynb
carnatic-raga-classifier-jeevster/: README.md  config0.yaml  dataloader.py  inference.py  main.py  models.py  raga2label0.json
data-n-440/: PuriyaD_swar_bites.json
data440/: pitchreader.ipynb
midiutils/: read.py
mogra/: __init__.py  datatypes.py  tgnn.py  tonnetz.py
mogra/raagfinder/: __init__.py  parse.py  raags.pkl
quicktranscribe/: kde.py  pitch.py  tonic.py  wave.py
raag-identifier/: hindustani-raag-identifier-from-musicgen.ipynb  hindustani-raag-identifier.ipynb  raagdataset.ipynb
tanarang/: README.md  conversion_utils.py  datatype_utils.py  datatypes.py  raaglist.csv  raags.pkl  tanarang.ipynb
transcriptions/: KaushikDhwani_[oQuyV_tsNs].txt
viz/: tonnetz.py
