[tool.poetry]
name = "icm-shruti-analysis"
version = "0.1.0"
description = ""
authors = ["Neeraja Abhyankar <neerajaabhyankar@Neerajas-MacBook-Air.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
musicbrainzngs = "0.7"
unidecode = "1.1.1"
eyed3 = "0.8.12"
pydub = "0.23.1"
libmagic = "^1.0"
pytest = "5.1.1"
python-magic = "0.4.15"
traitlets = "5.9.0"
librosa = "^0.10.1"
speechrecognition = "^3.10.1"
black = "^24.1.1"
beautifulsoup4 = "^4.12.3"
dill = "^0.3.8"
youtube-search-python = "^1.6.6"
regex = "^2023.12.25"
datasets = "^2.18.0"
transformers = "^4.39.1"
evaluate = "^0.4.1"
yt-dlp = "^2024.3.10"
torch = "2.4.0"
accelerate = "^0.28.0"
renumics-spotlight = "^1.6.8"
mido = "^1.3.2"
rich = "^13.7.1"
plotly = "^5.22.0"
torchaudio = "^2.4.0"
ruamel-yaml = "^0.18.6"
emoji = "^2.13.0"
torch-geometric = "^2.6.1"
seaborn = "^0.13.2"
torch-geometric-temporal = "^0.54.0"
openai = "^1.54.3"
diffusers = "^0.31.0"
matplotlib-inline = "^0.1.7"
nltk = "^3.9.1"
omegaconf = "^2.3.0"
lightning = "^2.4.0"
torchsummary = "^1.5.1"
h5py = "^3.12.1"
munch = "^4.0.0"
mir-eval = "^0.7"
compiam = "^0.4.0"
essentia = "^2.1b6.dev1177"
torcheval = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
